# Airflow-ETL-Pipeline-with-Postgresql-and-API-Integration-in-Astro-Cloud-And-AWS

./: Readme.md  docker-compose.yaml  main.py  pyproject.toml
.astro/: config.yaml
dags/: etlpipeline.py
