[project]
name = "airfloe-etl-pipeline-with-postgresql-and-api-integration-in-astro-cloud-and-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-http==4.10.0",
    "dotenv>=0.9.9",
]
